modules/gdscript/tests/scripts/parser/errors/export_godot3_syntax.gd
export var test = 3


func test():
	pass
